# smart-qr-tools

./: .gitignore  pyproject.toml
smart_qr_tools.egg-info/: SOURCES.txt  requires.txt  top_level.txt
smartqr/: cli.py  core.py
